[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/rainbow.png" type="Texture" id=1]
[ext_resource path="res://abilities/Light/RainbowLine2D.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[node name="RainbowTest" type="Node2D"]
script = ExtResource( 3 )

[node name="RainbowLine" type="Line2D" parent="."]
texture = ExtResource( 1 )
texture_mode = 1
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 0.470588, 0, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 0.984314, 0, 1 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_right = 2.0
margin_bottom = 2.0
color = Color( 0.266667, 1, 0, 1 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
